# OOP_domaci_1

./: .clang-format  CMakeLists.txt  CMakePresets.json  compile_commands.json
Test_app/: CMakeLists.txt  source.cpp  tst.h
VirtualPianoLib/: AudioEditor.cpp  AudioEditor.h  CMakeLists.txt  Convertions.h  MusicSymbol.h  enums.h  list.h
VirtualPianoLib/include/: Acord.h  AudioEditor.h  Chord.h  Convertions.h  MusicSymbol.h  Note.h  Pause.h  list.h  list.tpp  std.h
VirtualPianoLib/src/: AudioEditor.cpp  Chord.cpp  MusicSymbol.cpp  Note.cpp  Pause.cpp
